Fixed iPad front page layout bug

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1027,7 +1027,7 @@ Footer
 
 #letters-0 .need_housing_button,
 #letters-1 .need_housing_button {
-	height: 123px;
+	height: 6.95em;
 }
 
 .tile-number-unread {
